# neugaze

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  dev-link-system.sh  dpkg.txt  neu-notes.md  neugaze.code-workspace
docs/guide/: WIP-cli.md  WIP-configuration.md  WIP-development.md  WIP-gnome.md  WIP-gui.md  WIP-how-it-works.md  WIP-installation.md  WIP-pam.md  WIP-troubleshooting.md  WIP-uninstallation.md  development-testing.md
gnome-shell-extension/: extension.js  metadata.json  prefs.js
neugaze/: Cargo.toml
neugaze-core/: Cargo.toml
neugaze-core/src/: camera.rs  capture.rs  config.rs  dbus.rs  detect.rs  face.rs  lib.rs
neugaze-gui/: Cargo.toml
neugaze-gui/src/: camera_view.rs  capture_dialog.rs  main.rs  window.rs
neugaze-pam/: Cargo.toml
neugaze-pam-core/: Cargo.toml  build.rs
neugaze-pam-core/src/: lib.rs
neugaze-pam/src/: lib.rs
neugaze/src/: align.rs  daemon.rs  liveness.rs  main.rs  models.rs  recognize.rs  users.rs
scripts/: neugaze-install.sh  neugaze-start-vm.sh  neugaze-vm-run.sh  neugaze-vm-setup.sh
