[package]
name = "neugaze-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
image = "0.25.10"
libc = "0.2"
nalgebra = "0.34.2"
ndarray = "0.17.2"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
ort = "2.0.0-rc.12"
rusty_scrfd = "1.3.1"
zbus = "5.15"
zvariant = "5.11"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
tracing = "0.1"
toml = "1.1"
ureq = "3.3"
uuid = { version = "1.23", features = ["v4"] }
zip = "8.6"
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.2"
strum = "0.28"
strum_macros = "0.28"
