[package]
name = "neugaze-gui"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://neugaze.example.com"
repository = "https://github.com/Gundu-Labs/neugaze"
authors = ["Gundu Labs <maintainers@example.com>"]

[[bin]]
name = "neugaze-gui"
path = "src/main.rs"

[dependencies]
neugaze-core = { path = "../neugaze-core" }
gtk4 = { version = "0.11.3", features = ["gnome_46"] }
libadwaita = { version = "0.9.1", features = ["v1_4"] }
zbus = { version = "5.15.0", features = ["blocking-api"] }
zbus_polkit = "5.0.0"
enumflags2 = "0.7"
anyhow = "1.0.102"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.2"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"] }
gio = { version = "0.22.6", features = ["v2_66"] }
glib = { version = "0.22.7", features = ["v2_66"] }
