[package]
name = "pam-neugaze-core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
neugaze-core = { path = "../neugaze-core" }
libc = "0.2"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
zbus = "5.15"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
parking_lot = "0.12"
anyhow = "1.0"
futures = "0.3"
