[package]
name = "neugaze"
version = "0.1.0"
edition = "2024"
description = "Facial authentication for Linux"
license = "MIT"
homepage = "https://neugaze.example.com"
repository = "https://github.com/rlneimiller/neugaze"
authors = ["neugaze contributors"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
neugaze-core = { path = "../neugaze-core" }
image = "0.25.10"
libc = "0.2"
nalgebra = "0.34.2"
ndarray = "0.17.2"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
ort = "2.0.0-rc.12"
rayon = "1.12"
sha2 = "0.11"
tokio = { version = "1.52", features = ["full", "rt-multi-thread"] }
ureq = "3.3"
uuid = { version = "1.23", features = ["v4"] }
zbus = "5.15"
zip = "8.6"
console = "0.16.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dialoguer = "0.12"
toml = "1.1"
futures = "0.3.32"
zbus_polkit = "5.0.0"
crossterm = "0.29"
ratatui = "0.30"

[[bin]]
name = "neugazed"
path = "src/main.rs"

[[bin]]
name = "neugaze"
path = "src/bin/cli.rs"
